Add  product from admin pannel to the database

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -3,11 +3,29 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
     font-family: Outfit;
 }
-.active{
+
+select,
+input,
+textarea {
+    border: 1px solid #c2c2c2;
+    border-radius: 4px;
+    
+
+}
+
+select:focus,
+input:focus,
+textarea:focus {
+
+    outline: 2px solid #C586A5;
+    /* True outline effect */
+}
+
+
+.active {
     background-color: #ffebf5;
     border-color: #C586A5;
 }
-
